page layout bug fix

--- a/public/css/lotoclub.css
+++ b/public/css/lotoclub.css
@@ -110,7 +110,7 @@ button:hover {
 
 /**************** Navbar ***********************/
 nav {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 200px;
